# glass-path

./: .gitignore  README.md  first_run.sh  pyproject.toml  requirements.txt  resnet  run_cpu_train_16t.sh  run_fedsup_variant.sh  sitecustomize.py  train.sh
code/: __init__.py  backbones.py  classifier.py  cli.py  concept.py  data.py  federated.py  graph.py  hybrid.py  image.py  pipeline.py  resnet_branch.py  runtime.py  ssl.py
data/: data.csv
docs/: hybrid_graph_sketch.md  lunghist700_related_work.md
glass_path/: pipeline.py
runs/: README.md
