[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "glass-path"
version = "0.1.0"
description = "Federated self-supervised graph-based pathology pipeline for the G.L.A.S.S. project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "Pillow>=10.0",
  "torch>=2.2",
]

[project.scripts]
glass-path = "glass_path.cli:main"

[tool.setuptools]
packages = ["glass_path"]

